--- a/Market_Neutral_Strategy.ipynb
+++ b/Market_Neutral_Strategy.ipynb
@@ -993,8 +993,7 @@
     "    key=str(key)\n",
     "    chat_id=str(chat_id)\n",
     "    send_table='https://api.telegram.org/bot' + key + '/sendMessage?chat_id=' + chat_id + '&parse_mode=Markdown&text=' + summary\n",
-    "    response=requests.get(send_table)\n",
-    "    return response.json()"
+    "    response=requests.get(send_table)\n"
    ]
   },
   {
